--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -45,7 +45,7 @@
       <span class="mw-headline" id="Import_HTML_dumps_from_archive.org">Import HTML dumps from archive.org</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral">Download Central</a> page lists wikis that can be downloaded from archive.org.
+      The <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a> page lists wikis that can be downloaded from archive.org.
     </p>
     <ul>
       <li>
@@ -68,7 +68,7 @@
       <span class="mw-headline" id="Import_online_by_click">Import online by click</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
+      The <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_5" title="Dashboard/Import/Online" class="xowa-visited">Import online</a> page lists 800+ wikis that can be imported by clicking on a link.
     </p>
     <ul>
       <li>
