--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -181,7 +181,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -213,7 +213,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking" class="xowa-visited">Shrinking a wiki</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking">Shrinking a wiki</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card">Installing to a flash card</a>
