--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,20 +82,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.8.1.1 features the following:
+      v3.8.2.1 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2016-07 Arabic Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews
+        (Wiki) Publish 2016-07 Polish Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews
       </li>
       <li>
-        (PC) Fix "invalid title" when clicking on wikis in left-hand nav
+        (PC) Fix random "SSL peer shut down incorrectly" when downloading database dumps
       </li>
       <li>
-        (PC) Minor wikibase update for "renderSnaks"
+        (PC) Fix "Script error:Module:Effective protection expiry" for many English Wikipedia pages
       </li>
       <li>
-        (Android) Fix random failure when restarting XOWA while downloading wikis
+        (PC) Fix parser issues for Polish Wikipedia pages, including location maps and broken infoboxes
       </li>
     </ul>
     <p>
@@ -134,7 +134,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -166,7 +166,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -186,7 +186,7 @@
     </p>
     <ul>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_13" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
       </li>
       <li>
         v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_14" title="App/Search">App/Search</a>
@@ -247,7 +247,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_22" title="Options/Window">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_23" title="Options/HTML">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_22" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_23" title="Options/HTML" class="xowa-visited">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -303,7 +303,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_29" title="Special:XowaDownloadCentral">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_29" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -311,7 +311,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_30" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_30" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 826 known Wikimedia Foundation wikis
@@ -351,7 +351,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_35" title="Help/Contents">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_35" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
