--- a/home/wiki/App/Setup/System_requirements.html
+++ b/home/wiki/App/Setup/System_requirements.html
@@ -57,7 +57,7 @@
         Memory: 512 MB minimum; 2 GB recommended
       </li>
       <li>
-        Storage: varies per wiki. As a rough guideline, multiply the dump file by 2. For dump sizes, see either <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Dashboard/Import/Online</a> or <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a>. 
+        Storage: varies per wiki. As a rough guideline, multiply the dump file by 2. For dump sizes, see either <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> or <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a>. 
         <ul>
           <li>
             For example, for English Wikipedia, the dump size is 12 GB. 
