--- a/home/wiki/App/UI/Keybindings.html
+++ b/home/wiki/App/UI/Keybindings.html
@@ -62,7 +62,7 @@
       <span class="mw-headline" id="XOWA_keyboard_shortcuts_.28basic.29">XOWA keyboard shortcuts (basic)</span>
     </h2>
     <p>
-      See <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_2" title="Options/Shortcuts">Options/Shortcuts</a>
+      See <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_2" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
     </p>
     <h2>
       <span class="mw-headline" id="XOWA_keyboard_shortcuts_.28advanced.29">XOWA keyboard shortcuts (advanced)</span>
