--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
