--- a/home/wiki/Change_log/v3.8.2.1.html
+++ b/home/wiki/Change_log/v3.8.2.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Change log/v3.8.1.1 - XOWA</title>
+  <title>Change log/v3.8.2.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,7 +11,7 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.8.1.1</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.8.2.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
@@ -25,7 +25,7 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.8.1.1_.282016-08-01.29"><span class="tocnumber">1</span> <span class="toctext">v3.8.1.1 (2016-08-01)</span></a> 
+          <a href="#v3.8.2.1_.282016-08-07.29"><span class="tocnumber">1</span> <span class="toctext">v3.8.2.1 (2016-08-07)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
               <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
@@ -34,29 +34,23 @@
               <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-5">
-              <a href="#Dev"><span class="tocnumber">1.4</span> <span class="toctext">Dev</span></a>
+              <a href="#Dev"><span class="tocnumber">1.3</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="v3.8.1.1_.282016-08-01.29">v3.8.1.1 (2016-08-01)</span>
+      <span class="mw-headline" id="v3.8.2.1_.282016-08-07.29">v3.8.2.1 (2016-08-07)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
     <ul>
       <li>
-        Wiki: Publish 2016-07 Arabic Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
+        Wiki: Publish 2016-07 Polish Wikipedia, Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
-    <p>
-      <br>
-    </p>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
     </h3>
@@ -65,12 +59,80 @@
     </p>
     <ul>
       <li>
-        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
+        Setup: Fix random "SSL peer shut down incorrectly".
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> <a href="https://en.wikipedia.org/wiki/UK" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/UK</a> <a href="https://en.wikipedia.org/wiki/Special:Random" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Special:Random</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Make "your.org" primary backup url.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://lists.wikimedia.org/pipermail/xmldatadumps-l/2016-August/001325.html" rel="nofollow" class="external free">https://lists.wikimedia.org/pipermail/xmldatadumps-l/2016-August/001325.html</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Scribunto: Fix script error for "Module:Effective protection expiry" "malformed expiry timestamp" on many en.w pages. {detected by William}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Change "infinite" to "infinity" for {{PROTECTIONEXPIRY}}.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Parser: Fix broken infobox tables on many pl.w pages. {detected by anonymous}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Ignore % in xml tag names.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: &lt;ref% name=abc&gt;def&lt;/ref&gt;&lt;references/&gt;.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://pl.wikipedia.org/wiki/Scynk_nadrzewny" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Scynk_nadrzewny</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Scribunto: Fix missing location maps for many pl.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Return top-level JSON arrays as numbered nodes.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://pl.wikipedia.org/wiki/Albania" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Albania</a> <a href="https://pl.wikipedia.org/wiki/Alabama" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Alabama</a> <a href="https://pl.wikipedia.org/wiki/Oklahoma_City" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Oklahoma_City</a>
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Scribunto: Fix missing "push buttons" for location maps on many pl.w pages.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Return decimal values as double.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        Scribunto: Fix missing location maps for many pl.w pages wherein location map info is not available.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Specify width / height as non-null in GetFileInfo.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://pl.wikipedia.org/wiki/Andrespol" rel="nofollow" class="external free">https://pl.wikipedia.org/wiki/Andrespol</a>
       </dd>
     </dl>
     <p>
@@ -78,72 +140,43 @@
     </p>
     <ul>
       <li>
-        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
+        Html: Fix "could not find" when clicking on wikis in left-sidebar. [broken since: v3.7.4.1] {detected by anonymous}
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">Blog</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Wikibase: Fix a few dozen script errors for ClassCast on fr.w pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnaks".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: Erreur de script: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: java.lang.ClassCastException: [Lgplx.Keyval; cannot be cast to java.lang.String.
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Acte_de_Médiation" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Wikibase: Fix one script error for ClassCast on en.v pages.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnak".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
-      </dd>
-    </dl>
-    <h3>
-      <span class="mw-headline" id="Android">Android</span>
-    </h3>
-    <ul>
-      <li>
-        DownloadCentral: Fix random failure when restarting XOWA while downloading wikis. {detected by anonymous}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Assert application is not null when setting callback.
+        <span style='font-variant:small-caps'>Resolved by</span>: Use Main_Page of target wiki, not current wiki.
       </dd>
     </dl>
     <p>
-      <br>
+      <b>trivial</b>
     </p>
+    <ul>
+      <li>
+        Messages: Fix "&lt;Please-translate&gt;" showing as "&lt;please-translate&gt;" on 1 s.w page.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: For missing messages, always use current key, not key of cached item.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://simple.wikipedia.org/wiki/Wikipedia:Simple_talk/Archive_116" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Wikipedia:Simple_talk/Archive_116</a>
+      </dd>
+    </dl>
     <h3>
       <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        Source: Refactor wikibase enums.
+        Html_dump: Pre-load all imagelinks to identify .ogg as audio or video.
       </li>
     </ul>
-    <ul>
-      <li>
-        Html_dump: Add html_dump comparision.
-      </li>
-    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikipedia.org/wiki/Lepidoptera" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Lepidoptera</a>
+      </dd>
+    </dl>
   
     </div>
   </div>
