--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -439,7 +439,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_15" title="Options/HTML">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_15" title="Options/HTML" class="xowa-visited">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
