--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2016-08-08</b> Polish Wikis updated<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
+    </li>
+  </ul>
+
   <b>2016-08-01</b> Arabic Wikis updated<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_arwiki_latest" class="external text" rel="nofollow">Arabic wikis</a>
