--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -123,7 +123,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-07-02
+          2016-08-01
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -222,40 +222,6 @@
       </tr>
       <tr>
         <td>
-          en.wikipedia_old.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          1969-12-31
-        </td>
-        <td class='cell_center'>
-        </td>
-        <td class='cell_center'>
-          &lt;&lt;NULL&gt;&gt;
-        </td>
-        <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          v2
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikipedia_old.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikipedia_old.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia_old.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
           en.wikivoyage.org
         </td>
         <td class='cell_center'>
@@ -322,6 +288,41 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wiktionary.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          fr.wikipedia.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-07-02
+        </td>
+        <td class='cell_center'>
+          2015-08-06
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -821,7 +822,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-07-03
+          2016-08-02
         </td>
         <td class='cell_center'>
           2015-08-05
