--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_android_v3.8.1.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.3.1/xowa_app_android_v3.8.3.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -86,6 +86,17 @@
     <ul>
       <li>
         <a href="https://github.com/gnosygnu/xowa_android/archive/master.zip" rel="nofollow" class="external text">Source code (Android)</a>
+      </li>
+    </ul>
+    <h2>
+      <span class="mw-headline" id="v3.8.3.1_.282016-08-14.29">v3.8.3.1 (2016-08-14)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="Android_2">Android</span>
+    </h3>
+    <ul>
+      <li>
+        Android: Fix random "Unable to start activity ComponentInfo" when starting XOWA.
       </li>
     </ul>
     <h2>
