--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -360,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 1.070 MB
-file count: 112
-oldest file: 2016-07-31 19:42:26
+space used: 439.705 KB
+file count: 48
+oldest file: 2016-08-14 20:47:05
 </textarea>
             </td>
           </tr>
