--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
