--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -2108,7 +2108,7 @@
     </p>
     <ul>
       <li>
-        Options: Automatically remove new line from end of value if in textarea (affects causes default value to be automatically saved, even though no change was made (tidy always adds trailing \n to textarea)); EX:Go to [[Options/Menus]] -&gt; Press Save -&gt; Check user_cfg.gfs -&gt; entries for menus exist (even though no change was made). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_33" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
+        Options: Automatically remove new line from end of value if in textarea (affects causes default value to be automatically saved, even though no change was made (tidy always adds trailing \n to textarea)); EX:Go to [[Options/Menus]] -&gt; Press Save -&gt; Check user_cfg.gfs -&gt; entries for menus exist (even though no change was made). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_33" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
     </ul>
     <p>
@@ -2345,10 +2345,10 @@
         Bookmarks: Fix "Add bookmark" no longer working. [broken since:v1.6.1.1]
       </li>
       <li>
-        Gui.Menu: Update menu text after configuring menus (affects menu items going blank after configuring (requires restart)). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_46" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
+        Gui.Menu: Update menu text after configuring menus (affects menu items going blank after configuring (requires restart)). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_46" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
       <li>
-        Gui.Menu: Add whitespace to default menu source (affects default menu source lines not indenting properly). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_47" title="Options/Menus">Options/Menus</a> [broken since:v1.6.1.1]
+        Gui.Menu: Add whitespace to default menu source (affects default menu source lines not indenting properly). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_47" title="Options/Menus" class="xowa-visited">Options/Menus</a> [broken since:v1.6.1.1]
       </li>
     </ul>
     <p>
@@ -2371,7 +2371,7 @@
         Gui.Page: Add menu item for Reload Page.
       </li>
       <li>
-        Gui.Menu: Allow same menu item to be added multiple times to same menu; EX:add_btn_default('xowa.app.exit');\nadd_btn_default('xowa.app.exit');. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_48" title="Options/Menus">Options/Menus</a>
+        Gui.Menu: Allow same menu item to be added multiple times to same menu; EX:add_btn_default('xowa.app.exit');\nadd_btn_default('xowa.app.exit');. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_48" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
         Gui.Page: Add menu item for Reset Font.
@@ -2580,7 +2580,7 @@
         Jtidy: Do not trim empty block element if it has attributes (affects incorrect table layout). See: <a href="https://ko.wikisource.org/wiki/Main_Page" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/Main_Page</a>
       </li>
       <li>
-        Jtidy: Do not add \n after &lt;span&gt; in &lt;pre&gt; (affects syntaxhighlight showing line numbers on different line). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_58" title="Options/Menus">Options/Menus</a>
+        Jtidy: Do not add \n after &lt;span&gt; in &lt;pre&gt; (affects syntaxhighlight showing line numbers on different line). See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_58" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
         Parser.Table: Do not insert &lt;tr&gt; between two nested tables (affects {|\n&lt;table&gt;&lt;tr&gt;&lt;td&gt;abc&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;). See: <a href="https://it.wikipedia.org/wiki/Portale:Animali" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Portale:Animali</a> <a href="https://it.wikipedia.org/wiki/Main_Page" rel="nofollow" class="external free">https://it.wikipedia.org/wiki/Main_Page</a>
@@ -2778,13 +2778,13 @@
         Gui: Allow pages to be loaded asynchronously when using "Open Link in Tab".
       </li>
       <li>
-        Gui: Add popup menu for tabs. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_64" title="Options/Menus">Options/Menus</a>
+        Gui: Add popup menu for tabs. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_64" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
-        Gui: Add popup menu for clicking on link. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_65" title="Options/Menus">Options/Menus</a>
+        Gui: Add popup menu for clicking on link. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_65" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
-        Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus">Options/Menus</a>
+        Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus" class="xowa-visited">Options/Menus</a>
       </li>
       <li>
         Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs">Options/Tabs</a>
