--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -264,7 +264,7 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian" class="xowa-visited">Dansguardian filter</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
