--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -373,7 +373,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_8" title="Options/Menus">Menus</a>
+              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_8" title="Options/Menus" class="xowa-visited">Menus</a>
             </td>
             <td>
               Change the menu bar or right-click menu
@@ -418,7 +418,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_13" title="Options/Category">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_13" title="Options/Category" class="xowa-visited">Category</a>
             </td>
             <td>
               Category options
