--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -224,10 +224,10 @@
           de.wikipedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-08-20
         </td>
         <td class='cell_center'>
           2015-08-06
@@ -236,13 +236,13 @@
           Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("de.wikipedia.org")'>Import</button>
@@ -741,6 +741,40 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          simple.wikipedia_bak.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          1969-12-31
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          xdat
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          v2
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("simple.wikipedia_bak.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("simple.wikipedia_bak.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("simple.wikipedia_bak.org")'>Search</button>
         </td>
       </tr>
       <tr>
