--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -426,7 +426,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_14" title="Options/Import Dansguardian">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_14" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
