--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -360,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 1.667 MB
-file count: 173
-oldest file: 2016-08-19 21:29:24
+space used: 278.039 KB
+file count: 65
+oldest file: 2016-08-27 11:41:54
 </textarea>
             </td>
           </tr>
