--- a/home/wiki/Options/Import_Dansguardian.html
+++ b/home/wiki/Options/Import_Dansguardian.html
@@ -307,7 +307,7 @@ li.active a, li.active a:hover
               Enabled: <sup id="cite_ref-enabled_0-0" class="reference"><a href="#cite_note-enabled-0">[1]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.bldr.wiki.filter.dansguardian.enabled" type="checkbox" class="options_checkbox" id='xowa_prop_0'>
+              <input xowa_prop="xowa.api.bldr.wiki.filter.dansguardian.enabled" type="checkbox" class="options_checkbox" id='xowa_prop_0' checked='checked'>
             </td>
           </tr>
           <tr>
@@ -406,7 +406,7 @@ li.active a, li.active a:hover
             <span class="mw-cite-backlink"><a href="#cite_ref-log_enabled_5-0">^</a></span> <span class="reference-text">Choose if a log is enabled. (default is <code>checked</code>)</span>
             <ul>
               <li>
-                <span class="reference-text">If checked, a database called dansguardian_log.sqlite3 will be created at <code>/xowa/bin/any/xowa/cfg/bldr/filter/wiki_name/</code></span>
+                <span class="reference-text">If checked, a database called dansguardian_log.sqlite3 will be created at <code>/xowa/wiki/wiki_name/</code></span>
               </li>
               <li>
                 <span class="reference-text">If unchecked, no database will be created</span>
